--- a/web/app/global.css
+++ b/web/app/global.css
@@ -17,3 +17,10 @@ body {
 .wallet-adapter-button {
   font-family: inherit !important;
 }
+
+.glassmorphism {
+  background: rgba(255, 255, 255, 0);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(9px);
+  -webkit-backdrop-filter: blur(9px);
+}
