--- a/web/app/global.css
+++ b/web/app/global.css
@@ -5,7 +5,6 @@
 html,
 body {
   height: 100%;
-  background-color: lavender;
 }
 
 .wallet-adapter-button-trigger {
@@ -30,6 +29,15 @@ body {
   stroke: white;
 }
 
+.bg-10pad {
+  padding-left: 20rem;
+}
+
+@media only screen and (max-width: 768px) {
+  .bg-10pad {
+    padding: unset;
+  }
+}
 .bg-dashboard {
   background-color: black;
   padding-bottom: 35rem;
@@ -144,5 +152,15 @@ body {
 @media only screen and (min-width: 768px) {
   .menu-dd {
     display: none; /* Oculta el div en dispositivos de escritorio */
+  }
+}
+
+.menu-ds {
+  padding-left: 10rem;
+}
+
+@media only screen and (max-width: 768px) {
+  .menu-ds {
+    padding: unset;
   }
 }
